# ASimpleNNCMake

./: .gitignore  CMakeLists.txt  Readme.md
doc/: MyNotebook.aux  MyNotebook.out  MyNotebook.tex
doc/pdf2imagepy/: main.py
include/: ActivationFunction.h  ChangeInputOutput.h  Hadamard.h  ReadMNIST.h
src/: ActivationFunction.cpp  ChangeInputOutput.cpp  Hadamard.cpp  ReadMNIST.cpp  main.cpp
